...
    <string name="bookDescription">Description</string>
    <string name="bookTitle">Book Title</string>
    <string name="bookAuthor">Book Author</string>
    <string name="bookISBN">Book ISBN</string>
    <string name="bookDelete">Delete</string>
    <string name="bookEdit">Edit</string>
    <string name="bookRequest">Request</string>
    <string name="search_title">Search</string>
    <string name="avail">Available</string>
    <string name="notAvail">Not Available</string>
    <string name="display_books_owned">Owned</string>
    <string name="display_books_available">Available</string>
    <string name="display_books_requested">Requested</string>
...
